--- a/app/src/main/res/layout/activity_add_detail.xml
+++ b/app/src/main/res/layout/activity_add_detail.xml
@@ -4,9 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddDetailActivity">
+    tools:context=".UI.AddDetailActivity">
 
     <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
@@ -21,6 +22,7 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <include layout="@layout/content_add_detail" />
+
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
