--- a/app/src/main/res/layout/content_add_detail.xml
+++ b/app/src/main/res/layout/content_add_detail.xml
@@ -43,4 +43,18 @@
         app:layout_constraintStart_toEndOf="@+id/call_Button"
         app:layout_constraintTop_toTopOf="@+id/call_Button"
         app:layout_constraintVertical_bias="0.0" />
+
+    <Button
+        android:id="@+id/goto_find_adress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:text="@string/show_adress_button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/parcel_list_button"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/parcel_list_button"
+        app:layout_constraintTop_toBottomOf="@+id/parcel_list_button"
+        app:layout_constraintVertical_bias="0.379"
+        tools:ignore="HardcodedText" />
 </androidx.constraintlayout.widget.ConstraintLayout>
