--- a/app/src/main/res/layout/parcel_item_view.xml
+++ b/app/src/main/res/layout/parcel_item_view.xml
@@ -6,7 +6,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="7dp">
+        android:padding="7dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp">
 
 
         <TextView
